# libs

./: CMakeLists.txt
.github/workflows/: e2e_ci.yml
cmake/modules/: bs_threadpool.cmake
driver/: event_table.c  ppm_events_public.h
dummy_plugins/: parse.c
test/drivers/test_suites/syscall_exit_suite/: recvfrom_x.cpp
test/libsinsp/: CMakeLists.txt  auid.cpp  docker_utils.cpp  docker_utils.h  event_capture.h  ipv6.cpp  paths.cpp  process.cpp  subprocess.cpp  sys_call_test.cpp  sys_call_test.h  tcp_client_server.cpp  tcp_client_server.h  thread_state.cpp  udp_client_server.cpp
test/libsinsp/resources/: CMakeLists.txt
test/libsinsp_e2e/: CMakeLists.txt  container.cpp  container_cgroup.cpp  container_image_splitting.cpp  docker_utils.cpp  docker_utils.h  event_capture.cpp  event_capture.h  ipv6.cpp  libsinsp_test_var.h.in  main.cpp  process.cpp  scap_file_reader.h  suppress_events.cpp  sys_call_test.cpp  tcp_client_server.cpp  test_helper.cpp  thread_state.cpp  udp_client_server.cpp  utils.h
test/libsinsp_e2e/resources/ipv6_traces/: CMakeLists.txt
userspace/libsinsp/: CMakeLists.txt  event.cpp  fdinfo.cpp  fdinfo.h  parsers.cpp  plugin.cpp  plugin.h  plugin_table_api.cpp  sinsp.cpp  sinsp.h  thread_pool.cpp  thread_pool.h  threadinfo.cpp  threadinfo.h
userspace/libsinsp/container_engine/: cri.cpp
userspace/libsinsp/state/: type_info.h
userspace/libsinsp/test/: CMakeLists.txt  plugins.ut.cpp
userspace/libsinsp/test/plugins/: metrics.cpp  routines.cpp  test_plugins.h
userspace/plugin/: plugin_api.h  plugin_types.h
